--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2023-01-28  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* configure.ac: Use tar-ustar option in Automake.
+
+2023-01-28  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* pickles/sframe.pk: Do not load elf.pk.  It is not needed.
 	* pickles/elf.pk: Remove.
 	* pickles/elf-32.pk: Likewise.
