--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-01-28  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-rt.pk (_pkl_print_format_any): Make sure to end
+	styling classes before returning.
+
+2023-01-28  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* configure.ac: Use tar-ustar option in Automake.
 
 2023-01-28  Jose E. Marchesi  <jemarch@gnu.org>
