--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,17 @@
 	* poke/pk-info.pk (pk_info_type): Do not print a header for
 	Computed Fields if there are no computed fields.
 
+2023-01-28  Arsen Arsenović  <arsen@aarsen.me>
+
+	std.pk: Implement strrchr
+	* libpoke/std.pk (strrchr): New function.  Finds the last
+	occurrence of a character in a string and returns its index, or
+	-1.
+	* doc/poke.texi (strrchr): Document new standard library function.
+	(String Functions): Add strrchr to menu, disambiguate menu entries
+	of strchr and strrchr.
+	* testsuite/poke.std/std-test.pk: Add strrchr test.
+
 2023-01-28  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/std.pk (isdigit): New function.
