--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,19 @@
 	* poke/pk-info.pk (pk_info_type): Do not print a header for
 	Computed Fields if there are no computed fields.
 
+2023-01-29  Arsen Arsenović  <arsen@aarsen.me>
+
+	std.pk: Refactor atoi into strtoi
+	* libpoke/std.pk (Strtoi_Result): New type.  Stores the result of
+	a strtoi call.
+	(strtoi): New function.  Parses a numeric prefix on a string and
+	returns the result and the number of parsed characters.
+	(atoi): Refactor to wrap strtoi.
+	* doc/poke.texi (strtoi): New node.
+	(atoi): Refer to strtoi for a list of bases.
+	* testsuite/poke.std/std-test.pk: Add tests for strtoi
+	offset-returning semantics.
+
 2023-01-28  Arsen Arsenović  <arsen@aarsen.me>
 
 	std.pk: Implement strrchr
