--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-01-30  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* poke/pk-info.pk (pk_info_type): Do not print a header for
+	Computed Fields if there are no computed fields.
+
 2023-01-28  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/std.pk (isdigit): New function.
