--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-01-30  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* poke/pk-info.pk (pk_info_type): Do not print a header for
+	Computed Fields if there are no computed fields.
+
 2023-01-27  Arsen Arsenović  <arsen@aarsen.me>
 
 	* configure.ac: Add git-version-gen reminder.
