--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023-01-30  Arsen Arsenović  <arsen@aarsen.me>
+
+	poke.texi: Remedy syntax-check fails
+	* doc/poke.texi (strtoi): Remove ``lets''.
+	(strtok): Italicize usages of ``i.e.''.
+
 2023-01-30  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* poke/pk-info.pk (pk_info_type): Do not print a header for
