--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2023-02-03  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-rt.pk (_pkl_eq_any): Fix comparation for structs.
+	* testsuite/poke.pkl/eq-any-union-1.pk: New test.
+	* testsuite/poke.pkl/neq-any-union-1.pk: Likewise.
+	* testsuite/poke.pkl/eq-any-struct-5.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
+2023-02-03  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-rt.pk (_pkl_eq_any): Fix typo in assembly template.
 
 2023-02-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
