--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2023-02-03  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-tab.y (declaration): improve error message.
+
+2023-02-03  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* doc/poke.texi (The any Type): Document that == and != are
 	applicable to values of type `any'.
 
