--- a/doc/poke.texi
+++ b/doc/poke.texi
@@ -4830,7 +4830,7 @@ operator:
 @example
 (poke) Packet @@ 12#B
 Packet @{
-  magic = 0xab,
+  magic == 0xab,
   size = 2,
   payload = [0x12UB,0x30UB],
   control = [0x1UB,0x1UB]
@@ -4848,7 +4848,7 @@ like this:
 @example
 (poke) Packet @{size = 2, payload = [1UB,2UB]@}
 Packet @{
-  magic = 0xab,
+  magic == 0xab,
   size = 2,
   payload = [0x1UB,0x2UB],
   control = [0x0UB,0x0UB]
@@ -4900,7 +4900,7 @@ We could of course do something like this:
 type Packet =
   struct
   @{
-    byte magic = 0xab;
+    byte magic == 0xab;
     byte size;
 
     byte[size == 0xff ? 0 : size] payload;
@@ -4914,7 +4914,7 @@ However, we can avoid replicating code by using a variable instead:
 type Packet =
   struct
   @{
-    byte magic = 0xab;
+    byte magic == 0xab;
     byte size;
 
     var real_size = (size == 0xff ? 0 : size);
@@ -4938,7 +4938,7 @@ var packet_special = 0xff;
 type Packet =
   struct
   @{
-    byte magic = 0xab;
+    byte magic == 0xab;
     byte size;
 
     var real_size = (size == packet_special ? 0 : size);
@@ -4984,7 +4984,7 @@ load supercrc;
 type Packet =
   struct
   @{
-    byte magic = 0xab;
+    byte magic == 0xab;
     byte size;
 
     var real_size = (size == 0xff ? 0 : size);
@@ -5018,7 +5018,7 @@ load supercrc;
 type Packet =
   struct
   @{
-    byte magic = 0xab;
+    byte magic == 0xab;
     byte size;
 
     var real_size = (size == 0xff ? 0 : size);
@@ -5108,7 +5108,7 @@ load supercrc;
 type Packet =
   struct
   @{
-    byte magic = 0xab;
+    byte magic == 0xab;
     byte size;
 
     var real_size = (size == 0xff ? 0 : size);
@@ -5188,7 +5188,7 @@ var packet_special = 0xff;
 type Packet =
   struct
   @{
-    byte magic = 0xab;
+    byte magic == 0xab;
     byte size;
     [...]
 
@@ -5268,7 +5268,7 @@ following struct type:
 type Packet =
   struct
   @{
-    byte magic = 0xab;
+    byte magic == 0xab;
     byte size : size <= 4096;
     [...]
 
@@ -5298,7 +5298,7 @@ type Packet =
   @{
     var MAXSIZE = 4096;
 
-    byte magic = 0xab;
+    byte magic == 0xab;
     byte size : size <= MAXSIZE;
     [...]
 
