--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023-02-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* pickles/search.pk (search_type): Fix `mapper' invocation.
+	* testsuite/poke.pickles/search-test.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
 2023-02-06  Nikolaos Chatzikonstantinou  <nchatz314@gmail.com>
 
 	* libpoke/std.pk (stoca): Add support for returning the converted
